k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progree-task2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: progree-task2
  template:
    metadata:
      labels:
        app: progree-task2
    spec:
      containers:
        - name: progree-task2
          image: progree-task2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
