k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progree-task2-service
spec:
  selector:
    app: progree-task2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
