k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progree-task2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: progree-task2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: progree-task2-service
                port:
                  number: 80
